[gd_scene load_steps=30 format=2]

[ext_resource path="res://Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://Music/Songs/bg_2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Images/Dungeons/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://StatsPanel.gd" type="Script" id=6]
[ext_resource path="res://BattleSummaryPanel.gd" type="Script" id=7]
[ext_resource path="res://Music/SFX/level_up.wav" type="AudioStream" id=8]
[ext_resource path="res://Music/SFX/footsteps_1.wav" type="AudioStream" id=9]
[ext_resource path="res://Music/SFX/game_over.wav" type="AudioStream" id=10]
[ext_resource path="res://TextBoxPanel.gd" type="Script" id=11]
[ext_resource path="res://ActionButtons/SuperAttackButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://BattleActionButtons.gd" type="Script" id=13]
[ext_resource path="res://ActionButtons/HealActionButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://ActionButtons/SwordActionButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://ActionButtons/ComboActionButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://ActionButtons/ShieldActionButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://ActionButtons/MendActionButton.tscn" type="PackedScene" id=18]
[ext_resource path="res://Images/skull_icon.png" type="Texture" id=19]
[ext_resource path="res://PlayerScore.gd" type="Script" id=20]
[ext_resource path="res://Music/SFX/beep_1.wav" type="AudioStream" id=21]

[sub_resource type="Animation" id=1]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 52 ), Vector2( 3, 54.9875 ), Vector2( 3, 52 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 52 ), Vector2( 3, 54.9875 ), Vector2( 3, 50.0084 ), Vector2( 3, 52 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 52 ), Vector2( 3, 47.0209 ), Vector2( 3, 52.9958 ), Vector2( 3, 49.7594 ), Vector2( 3, 53.4937 ), Vector2( 3, 52 ) ]
}

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="PlayerScore" type="Node" parent="."]
script = ExtResource( 20 )

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.109804 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 1.0042 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleSummaryPanel" type="Panel" parent="UI"]
visible = false
margin_left = 16.0
margin_top = 5.97491
margin_right = 75.0
margin_bottom = 47.9749
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleSummaryContainer" type="VBoxContainer" parent="UI/BattleSummaryPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryHeading" type="Label" parent="UI/BattleSummaryPanel/BattleSummaryContainer"]
margin_right = 59.0
margin_bottom = 12.0
text = "YOU WIN"
align = 1

[node name="SummaryBody" type="Label" parent="UI/BattleSummaryPanel/BattleSummaryContainer"]
margin_top = 12.0
margin_right = 59.0
margin_bottom = 38.0
text = "HP +1
AT +1
MP +1"
align = 1

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 52.0
margin_right = 87.0
margin_bottom = 71.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_right = 32.0
margin_bottom = 19.0
text = "HP
20/20"
align = 1

[node name="POW" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 36.0
margin_right = 58.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "POW
10"
align = 1

[node name="LV" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 62.0
margin_right = 84.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "LV
10"
align = 1

[node name="Status" type="VBoxContainer" parent="UI/StatsPanel/StatsContainer"]
visible = false
margin_left = 82.0
margin_right = 103.0
margin_bottom = 19.0
rect_min_size = Vector2( 21, 19 )
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/StatsPanel/StatsContainer/Status"]
margin_right = 21.0
margin_bottom = 12.0
text = "ST"
align = 1

[node name="Icon" type="Sprite" parent="UI/StatsPanel/StatsContainer/Status"]
position = Vector2( 9, 12.9456 )
texture = ExtResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/StatsPanel"]
anims/ShakeDown = SubResource( 1 )
anims/ShakeV = SubResource( 2 )
anims/ShakeV2 = SubResource( 3 )

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 7.0
margin_top = 73.0
margin_right = 83.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 15 )]

[node name="ShieldActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 17 )]
margin_left = 42.0
margin_right = 76.0

[node name="ComboActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 16 )]
margin_top = 16.0
margin_bottom = 29.0
level_required = 4

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 14 )]
margin_left = 42.0
margin_top = 16.0
margin_right = 76.0
margin_bottom = 29.0

[node name="SuperAttackButton" parent="UI/BattleActionButtons" instance=ExtResource( 12 )]
margin_top = 32.0
margin_bottom = 45.0

[node name="MendActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 18 )]
margin_left = 42.0
margin_top = 32.0
margin_right = 76.0
margin_bottom = 45.0

[node name="OverworldActionButtons" type="VBoxContainer" parent="UI"]
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 134.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/OverworldActionButtons"]
visible = false
margin_top = 7.0
margin_right = 72.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 13 )
text = "NEXT ROOM"

[node name="RestartButton" type="Button" parent="UI/OverworldActionButtons"]
visible = false
margin_top = 15.0
margin_right = 72.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 13 )
text = "RESTART"

[node name="ContinueButton" type="Button" parent="UI/OverworldActionButtons"]
visible = false
margin_top = 24.0
margin_right = 72.0
margin_bottom = 37.0
rect_min_size = Vector2( 70, 13 )
text = "CONTINUE"

[node name="TextBoxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 162.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="RichTextLabel" parent="UI/TextBoxPanel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 22.0
custom_styles/normal = SubResource( 4 )
custom_constants/table_vseparation = 0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/line_separation = 2
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 6 )
anims/FadeToNewRoom = SubResource( 7 )
anims/None = SubResource( 8 )

[node name="BGPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true

[node name="SFXLevelUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SFXGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="SFXNextRoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SFXBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
[connection signal="heal_damage" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_heal_damage"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="level_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_level_changed"]
[connection signal="power_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_power_changed"]
[connection signal="status_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_status_changed"]
[connection signal="took_damage" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_took_damage"]
[connection signal="pressed" from="UI/OverworldActionButtons/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="pressed" from="UI/OverworldActionButtons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/OverworldActionButtons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
